[package]
name = "mltools"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
name = "mltools"
path = "lib.rs"

[features]
default = ["hf_hub"]
hf_hub = [
  "dep:hf-hub",
  "dep:fs4",
  "dep:directories",
  "tokio/fs",
  "tokio/io-util",
]
tests = []

[dependencies]
#
# internal
utils_rs = { workspace = true, default-features = false, features = [
  "downloader",
] }

#
# encoding
serde.workspace = true

#
# async
tokio = { workspace = true, features = ["rt", "tracing"] }

#
# misc
genai = { version = "0.6.0-beta.2" }
url.workspace = true
hf-hub = { version = "0.4.3", default-features = false, features = [
  "tokio",
], optional = true }

#
# os
fs4 = { workspace = true, optional = true }
directories = { workspace = true, optional = true }

#
# http
reqwest.workspace = true

#
# encoding
data-encoding.workspace = true

#
# ds
nalgebra = "0.34.1"

[target.'cfg(target_os = "android")'.dependencies]
oar-ocr = { git = "https://github.com/GreatV/oar-ocr", version = "0.7.0", default-features = false }
fastembed = { version = "5.8.1", default-features = false, features = [
  "ort-load-dynamic",
  "image-models",
] }

[target.'cfg(not(target_os = "android"))'.dependencies]
oar-ocr = { git = "https://github.com/GreatV/oar-ocr", version = "0.7.0" }
fastembed = { version = "5.8.1", default-features = false, features = [
  "ort-download-binaries",
  "image-models",
] }
