[package]
name = "pauperfuse"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
name = "pauperfuse"
path = "lib.rs"

[dependencies]
#
# internal
utils_rs = { workspace = true, default-features = false }

#
# async
# async-trait.workspace = true
futures-buffered.workspace = true

#
# errors
thiserror.workspace = true

#
# encoding
blake3.workspace = true

#
# fs
notify = "9.0.0-rc.2"
# camino = "1.2.2"
filetime = "0.2.27"
jwalk = "0.8.1"

#
# sql
sqlx = { workspace = true, features = ["sqlite", "runtime-tokio"] }

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "tracing"] }
