[package]
name = "play"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# wasm - wasmtime 38 with WASI Preview1 support
wasmtime = "38.0.4"
wasmtime-wasi = { version = "38.0.4" }
cap-std = "3"

# async
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync"] }
futures.workspace = true

# error
anyhow.workspace = true
thiserror.workspace = true

# logging
tracing.workspace = true
tracing-subscriber.workspace = true

# runtime installation
directories = "5"
tar = "0.4"
xz2 = "0.1"
flate2 = "1"
getrandom = "0.2"

[dev-dependencies]
tempfile = "3"
