[package]
name = "plug_dayledger"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
path = "lib.rs"

[[bin]]
name = "manifest"
path = "manifest.rs"

[dependencies]
utils_rs = { workspace = true }
api_utils_rs.workspace = true
am_utils_rs.workspace = true
wflow_sdk.workspace = true
daybook_types = { workspace = true, features = ["wit", "automerge", "manifest", "schemars"] }

# genai = "0.4.1"
# llm = "1.3.4"

# ds
multihash.workspace = true

# serde
serde.workspace = true
serde_json.workspace = true
url.workspace = true
schemars = { version = "1.2", features = [
    "uuid1",
    "semver1",
    "url2",
    "jiff02",
    "indexmap2",
] }
pastey.workspace = true

# error
color-eyre.workspace = true
thiserror.workspace = true
displaydoc.workspace = true

wit-bindgen.workspace = true
chumsky = "0.12.0"
jiff = { version = "0.2.24", features = ["serde"] }
rust_decimal = "1.41.0"

[dev-dependencies]
automerge.workspace = true
