[package]
name = "plug_dayledger"
version.workspace = true
edition.workspace = true

[package.metadata.cargo-machete]
ignored = ["serde", "pastey"]

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
path = "lib.rs"

[[bin]]
name = "manifest"
path = "manifest.rs"

[dependencies]
#
# internal
utils_rs = { workspace = true }
api_utils_rs.workspace = true
wflow_sdk.workspace = true
daybook_types = { workspace = true, features = ["wit", "manifest", "schemars"] }

# genai = "0.4.1"
# llm = "1.3.4"

#
# encoding
serde.workspace = true
serde_json.workspace = true
url.workspace = true

#
# schema
schemars = { version = "1.2", features = [
    "uuid1",
    "semver1",
    "url2",
    "jiff02",
    "indexmap2",
] }

#
# wit
wit-bindgen.workspace = true

#
# misc
chumsky = "0.12.0"
jiff = { version = "0.2.24", features = ["serde"] }
rust_decimal = "1.41.0"
blake3.workspace = true

#
# macros
pastey.workspace = true

[dev-dependencies]
automerge.workspace = true
daybook_core = { workspace = true, features = ["test-support"] }
